# vol-surface-engine

./: ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: app.py
dashboard/components/: __init__.py  arbitrage_diag.py  helpers.py  local_vol.py  residual_heatmap.py  smile_slice.py  surface_3d.py  term_structure.py
scripts/: plot_iv_smiles.py
src/: __init__.py  arbitrage.py  data_loader.py  iv_engine.py  surface.py  svi_fitter.py
tests/: test_arbitrage.py  test_data_loader.py  test_integration.py  test_svi_fitter.py
