[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vol-surface-engine"
version = "0.1.0"
description = "Arbitrage-Free Volatility Surface Engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Cameron Scarpati" }]
keywords = ["volatility", "options", "SVI", "arbitrage", "implied-volatility", "quantitative-finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "yfinance>=0.2",
    "plotly>=5.18",
    "streamlit>=1.28",
    "pyarrow>=14.0",
    "requests>=2.31",
    "fredapi>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
]

[project.urls]
Repository = "https://github.com/CameronScarpati/vol-surface-engine"

[tool.setuptools.packages.find]
include = ["src*", "dashboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests that run the full SVI fitting pipeline (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (Streamlit uses this)
    "SIM108", # use ternary operator (readability preference)
    "RUF001", # ambiguous unicode (math symbols in docstrings)
    "RUF002", # ambiguous unicode
    "RUF003", # ambiguous unicode
]

[tool.ruff.lint.isort]
known-first-party = ["src", "dashboard"]
